<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SplashScreen!</string>
    <string name="app_name">金罗盘</string>
    
    <string name="menu_clear">清除数据</string>
    <string name="menu_wifisetting">网络设置</string>
    <string name="menu_help">帮助说明</string>
    <string name="menu_exit">退出</string>
    
    
    <string name="login_sales_area">地　　区:　</string>
	<string name="login_sales_ctr">营业网点:　</string>
    <string name="login_account_type">账号类型:　</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strInputPassHint">输入密码</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="login">登 录</string>
    <string name="auto_login">保存账号</string>
     
    <string name="holder_code">股东代码</string>
    <string name="holder_code1">股东账号</string>
    <string name="progress_dialog_about">进度提示</string>
    <string name="alert_dialog_about">系统提示</string>
	<string name="alert_dialog_ok">确定</string>
	<string name="alert_dialog_cancel">取消</string>
	<string name="go_back">返回</string>
    <string name="zr_rt_dialog_screenswitch_title">画面切换</string>
    <string name="zr_rt_dialog_message">数据加载中...</string>    
    <string name="zr_trade_select_dialog">证券交易选项</string>    
    <string name="network_error">当前网络不可用，是否继续？</string>
    <string name="load_data_error">当前网络连接中断，请重试</string>
    <string name="sure_login_out">您确定退出系统吗？</string>
    <string name="acc_login_out">您确定退出当前帐户吗？</string>
    <string name="zr_clear_stock_message">您确定要清除自选吗？</string>
    <string name="no_data">查无记录！</string>
    <string name="chedan_name">撤单</string>
    <string name="prompt_holder_code">请选择股东代码</string>
    <string name="prompt_trade_type">请选择委托方式</string>
    <string name="prompt_modify_password_type">请选择密码类型</string>
    <string name="prompt_exchange_fund_type">请选择交易类别</string>
    <string name="css_trade_type">委托方式</string>
    <string name="chart_nodata">请输入代码获取数据</string>
    <string name="css_exchange_fund_operation">交易类别</string>
    <string name="fund_code">基金代码</string>
    <string name="fund_name">基金名称</string> 
    <string name="fund_state">基金状态</string>
    <string name="avai_asset">可用资金</string>
    <string name="fund_tacode">基金公司</string>
    <string name="fund_acctype">开户类型</string>
    <string name="fund_taacc">基金账号</string>
    <string name="fund_postid">邮政编码</string>
    <string name="fund_tel">电话号码</string>
    <string name="fund_mobile">手机号码</string>
    <string name="fund_email">电子邮件</string>
    <string name="fund_addr">联系地址</string>
    <string name="label_modify_password_type">选择密码类型</string>
    <string name="transfer_type">转帐方式</string>
    <string name="css_bank">转账银行</string>
    <string name="css_currency">币种类别</string>
    <string name="fund_nav">基金净值</string>
    <string name="avai_redemp_number">可赎份额</string>
    <string name="redemp_flag">巨额赎回标志</string>
    <string name ="convertnum">转换份额</string>
    <string name ="convertoutcode">转出代码</string>
    <string name ="convertincode">转入代码</string>
    <string name ="maxhaveconvert">最大可转</string>
    <string name="have_number">持有份额</string>
    <string name="melonset">分红方式</string>
    <string name="fundcompany">基金公司</string>
    <string name="fundtype">基金类型</string>
    <string name="fundlevel">基金3年评级</string>
    <string name="fundmanagerlevel">基金5年评级</string>
    <string name="openfundname">开放式基金查询</string>
    <string name="all">全部</string>
    <string name="fundquery">基金查询</string>
    <string name="kfstock">股票型基金</string>
    <string name="kfbond">债券型基金</string>
    <string name="kfmonetary">货币型基金</string>
    <string name="kfmix">混合型基金</string>
    <string name="sunprivatetitle">阳光私募</string>
    <string name="jingzhititle">净值增长排行</string>
    
    <string name="paiming_title1">证券代码</string>
    <string name="paiming_title2">证券名称</string>
    <string name="paiming_title3">现价</string>
    <string name="paiming_title4">日 涨幅</string>
    
    <string name="progress_ask">数据加载中...,请稍后</string>
    <string name="progress_cancel">取消</string>
    <string name="zjcj_title">最近成交</string>
    <string name="spj_title">上破价</string>
    <string name="zfxd_title">涨幅限定</string>
    <string name="xpj_title">下破价</string>
    <string name="dfxd_title">跌幅限定</string>
    <string name="quotewarn_title">行情预警</string>
    <string name ="alert_tip">提示</string>
    <string name ="alert_delete">您确定要删除吗？</string>
    <string name="spj_message">上破价请输入合法数据</string>
    <string name="spj_message2">上破价必须大于最近成交价</string>
    <string name="spj_message3">上破价不能超出最近成交的5倍</string>
     
    <string name="xpj_message">下破价请输入合法数据</string>
    <string name="xpj_message2">下破价必须小于最近成交价</string>
    <string name="xpj_message3">下破价不能低于最近成交的1/5倍</string>
    <string name="zjcj_message">最近成交不能为0</string>
    <string name="cjmx_loading">载入中...</string>
    <string name="cjmx_title">成交明细</string>
    
     <string name="mci_mobile">手机号码:</string>
    <string name="mci_phone">联系电话:</string>
    <string name="mci_education">学　　历:</string>
    <string name="mci_job">职　　业:</string>
    <string name="mci_post">邮政编码:</string>
    <string name="mci_email">邮　　箱:</string>
    <string name="mci_address">通讯地址:</string>
    <string name="splashreadtip">正在获取数据...</string>
    <string name="splashloadtip">载入中...</string>
    <string name="importdata">您确定要导入吗？</string>
    <string name="loadchicangdata">加载持仓数据,请等待...</string>
    <string name="importcomplete">导入持仓股成功,请查看</string>
    <string name="importno">没有查询到可用的持仓股</string>
    <string name="importerror">导入持仓股失败,请重试</string>
    <string name="hongkongstocktimeout">港股行情至少延时15分钟!</string>
    <string name="jingzhiaddlabel">本年净值增长率</string>
    <string name="csskeyboard">Keyboard</string>
    
	<string name="csskeyboardquery">600|7|8|9|601|4|5|6|000|1|2|3|002|.|0|&lt;-|300|确定|字母|</string>
	<string name="csskeyboardbig">A|B|C|D|E|F|G|H|I|J|K|L|M|N|O|P|Q|R|S|T|U|V|W|X|Y|Z|空格|$|&lt;-| |确定|数字|</string>
	<string name="csskeyboardstock">600|7|8|9|601|4|5|6|000|1|2|3|002|.|0|&lt;-|300|确定|字母|</string>
	<string name="csskeyboardnum2">600|7|8|9|601|4|5|6|000|1|2|3|002|.|0|&lt;-|300|确定| |</string>
	<string name="csskeyboardnum">1|2|3|4|5|6|7|8|9|确定|0|删除|</string>
	<string name="csskeyboardnumdot">1|2|3|4|5|6|7|8|9|.|0|删除|</string>
	     
    <string name="system_setting_title">版本号： 1023</string>
    <string name="system_setting_content">欢迎您使用南京证券推出的金罗盘android版。使用金罗盘掌上理财，您可以随时畅享南京证券为您提供的高速行情、在线交易、精品资讯等全方位的理财服务。</string>
    
    
    <string name="system_update_title">更新提示</string>
    <string name="system_update_content">需要更新服务器股票列表，请重启！</string>
    <string name="load_allstock_msg">您确定要从服务器获取最新的股票列表吗？</string>
    <string name="load_allhkstock_msg">需要从服务器获取扩展市场行情数据，是否继续？</string>
    <string name="load_allstock_msg_success">更新成功</string>
    <string name="load_allstock_msg_failure">更新失败</string>
    
    
    <string name="alert_server_ischange">线路选择</string>
    <string name="server_error">未能获得数据，可能是所选线路有问题，是否前切换线路界面</string>
    <string name="alert_system_not_support">尊贵的用户您好，感谢您使用南京证券金罗盘Android版本。很抱歉由于分辨率的原因，我们的软件暂不支持您所使用的设备。建议您使用320*480、480*800、480*854的机型，给您造成的不便敬请谅解！谢谢...</string>
    
</resources>
