<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@android:color/white" android:gravity="top|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/system_update_title" />
    <View android:background="#ff41597a" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="10.0dip" />
    <TextView android:id="@+id/zr_update_allstock" android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/zr_white" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="30.0dip" android:text="@string/system_update_content" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textColor="@android:color/black" android:gravity="center" android:id="@+id/okButton" android:paddingBottom="7.0dip" android:layout_width="120.0dip" android:layout_height="wrap_content" android:text="@string/alert_dialog_ok" />
    </LinearLayout>
</LinearLayout>