<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:orientation="vertical" android:id="@+id/zrfundaccountformlayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
  	   <include android:id="@+id/zr_headerBar" android:layout_width="fill_parent" android:layout_height="@dimen/title_height" layout="@layout/zr_topbar" />
  		<ScrollView android:id="@+id/zrfundaccountformscroll" android:layout_below="@id/zr_headerBar" android:layout_width="fill_parent"  android:layout_height="wrap_content" android:layout_weight="1"
  					xmlns:android="http://schemas.android.com/apk/res/android">
  				<LinearLayout android:id="@+id/accountformLinearLayout01" style="@style/zropenfundtitlelinelaystyle">
  					<LinearLayout android:id="@+id/accountformLinearLayout03" style="@style/zrtexteditheaderstyle">
  						<TextView android:id="@+id/zr_accountform_label_fund_tadm" android:text="@string/fund_tacode" style="@style/zrtextviewstyle" />
  						<EditText android:id="@+id/accountform_fundtacode" android:hint="" style="@style/zreditfillstyle" android:numeric="integer" android:cursorVisible="false" android:focusable="false" android:focusableInTouchMode="false" android:textColor="@color/zr_dimgray" android:gravity="center"/>
  					</LinearLayout>
  					<LinearLayout android:id="@+id/accountformLinearLayout05"  style="@style/zrtexteditcenterstyle">
  						<TextView android:id="@+id/zr_accountform_label_fundAccType" android:text="@string/fund_acctype" style="@style/zrtextviewstyle" />
	          			<Spinner android:paddingLeft="3dip" android:id="@+id/accountform_fundAccType" android:background="@drawable/zrspinnerbgwhitenew" android:layout_marginLeft="10.0dip"
					android:layout_width="fill_parent" android:layout_marginRight="10.0dip" android:layout_gravity="center"
					android:layout_height="40dip" android:ellipsize="middle" />
  					</LinearLayout>
  					<LinearLayout android:id="@+id/accountformLinearLayout06" style="@style/zrtexteditcenterstyle">
	    				<TextView android:id="@+id/zr_accountform_label_fund_taacc" android:text="@string/fund_taacc" style="@style/zrtextviewstyle" />
  						<EditText android:id="@+id/accountform_fundtaacc" android:hint=""  style="@style/zreditfillstyle" android:numeric="integer" />
					</LinearLayout>
					<LinearLayout android:id="@+id/accountformLinearLayout07" style="@style/zrtexteditcenterstyle">
	    				<TextView android:id="@+id/zr_accountform_label_fund_postid" android:text="@string/fund_postid" style="@style/zrtextviewstyle" />
  						<EditText android:id="@+id/accountform_fundPostId" android:hint=""  style="@style/zreditfillstyle" android:numeric="integer" />
					</LinearLayout> 
					<LinearLayout android:id="@+id/accountformLinearLayout08" style="@style/zrtexteditcenterstyle">
	    				<TextView android:id="@+id/zr_accountform_label_fund_tel" android:text="@string/fund_tel" style="@style/zrtextviewstyle" />
  						<EditText android:id="@+id/accountform_fundTel" android:phoneNumber="true" style="@style/zreditfillstyle" android:numeric="integer" />
					</LinearLayout>
					<LinearLayout android:id="@+id/accountformLinearLayout09" style="@style/zrtexteditcenterstyle">
	    				<TextView android:id="@+id/zr_accountform_label_fund_mobile" android:text="@string/fund_mobile" style="@style/zrtextviewstyle" />
  						<EditText android:id="@+id/accountform_fundMobile" android:hint=""  style="@style/zreditfillstyle" android:numeric="signed" />
					</LinearLayout>
					<LinearLayout android:id="@+id/accountformLinearLayout10" style="@style/zrtexteditcenterstyle">
	    				<TextView android:id="@+id/zr_accountform_label_fund_email" android:text="@string/fund_email" style="@style/zrtextviewstyle" />
  						<EditText android:id="@+id/accountform_fundEmail" android:hint=""  style="@style/zreditfillstyle"/>
					</LinearLayout>
					<LinearLayout android:id="@+id/accountformLinearLayout11" style="@style/zrfundtexteditfooterstyle">
	    				<TextView android:id="@+id/zr_accountform_label_fund_addr" android:text="@string/fund_addr" style="@style/zrtextviewstyle" />
  						<EditText android:id="@+id/accountform_fundAddr" android:layout_width="fill_parent" android:layout_height="wrap_content"
  						android:textSize="18.0dip" android:paddingLeft="5.0dip" android:background="@drawable/njzq_tyyh_lineinput"
  						android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:paddingBottom="1.0dip"
  						 android:inputType="textMultiLine" android:singleLine="false" android:lines="3" android:gravity="top"/>
					</LinearLayout>
					
					<LinearLayout android:layout_width="fill_parent" android:layout_height="100dip"/>
					
  				</LinearLayout>
  		</ScrollView>
  		 <LinearLayout android:id="@+id/linearyout2" android:layout_width="fill_parent"  android:layout_alignParentBottom="true" android:layout_height="wrap_content" >
  			<include android:id="@+id/zrtoolbar"
            android:layout_marginBottom="0dip"
            android:layout_weight="2"
			 layout="@layout/zr_toolbar2" />
  		</LinearLayout>
  		<com.cssweb.android.custom.TransPanel
		android:gravity="left" android:orientation="vertical" android:id="@+id/zr_popup_window"
		android:visibility="gone" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_below="@id/zr_headerBar">
		<ListView android:id="@+id/zr_menulist" android:background="@drawable/zrlistback" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@drawable/zrlistselectbg" android:cacheColorHint="#ff1d1d1d" android:divider="@drawable/zrlistfgx" android:dividerHeight="2.0dip" android:keepScreenOn="true"
             xmlns:android="http://schemas.android.com/apk/res/android" />
	</com.cssweb.android.custom.TransPanel>
  		
 </RelativeLayout>