<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:orientation="vertical" android:id="@+id/zrmodifypasswordlayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
     <include android:id="@+id/zr_headerBar" android:layout_width="fill_parent" android:layout_height="@dimen/title_height" layout="@layout/zr_topbar" />
   
  
	<ScrollView android:id="@+id/zrmodifycontactinfoscroll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_below="@id/zr_headerBar"
	  xmlns:android="http://schemas.android.com/apk/res/android">
	  
	    <LinearLayout android:id="@+id/LinearLayout01" style="@style/zrtitlelinelaystyle" android:layout_weight="1.0"  android:layout_below="@id/zr_headerBar">
	        <LinearLayout android:id="@+id/LinearLayout02" style="@style/zrtexteditheaderstyle">
	            <TextView android:text="@string/mci_mobile" android:textColor="@color/zr_orange" style="@style/zrtextviewstyle" />
	            <EditText android:id="@+id/Mobile" android:numeric="integer" style="@style/zreditfillstyle" />
	        </LinearLayout>
	        <LinearLayout android:id="@+id/LinearLayout03" style="@style/zrtexteditcenterstyle">
	            <TextView android:text="@string/mci_phone" android:textColor="@color/zr_orange" style="@style/zrtextviewstyle" />
	            <EditText android:id="@+id/Phone" style="@style/zreditfillstyle" />
	        </LinearLayout>
	        <LinearLayout android:id="@+id/LinearLayout04" style="@style/zrtexteditcenterstyle">
	            <TextView android:text="@string/mci_education" android:textColor="@color/zr_orange" style="@style/zrtextviewstyle" />
	            <Spinner android:paddingLeft="3dip" android:id="@+id/Education" android:background="@drawable/zrspinnerbgwhitenew" android:layout_marginLeft="10.0dip"
					 android:layout_width="fill_parent" android:layout_marginRight="10.0dip" android:layout_gravity="center"
					android:layout_height="40dip" android:ellipsize="middle"/>
	        </LinearLayout>
	         <LinearLayout android:id="@+id/LinearLayout05" style="@style/zrtexteditcenterstyle">
	            <TextView android:text="@string/mci_job" android:textColor="@color/zr_orange" style="@style/zrtextviewstyle" />
	            <Spinner android:paddingLeft="3dip" android:id="@+id/Job" android:background="@drawable/zrspinnerbgwhitenew" android:layout_marginLeft="10.0dip"
					android:layout_width="fill_parent" android:layout_marginRight="10.0dip" android:layout_gravity="center"
					android:layout_height="40dip" android:ellipsize="middle" />
	        </LinearLayout>
	        <LinearLayout android:id="@+id/LinearLayout06" style="@style/zrtexteditcenterstyle">
	            <TextView android:text="@string/mci_post" android:textColor="@color/zr_orange" style="@style/zrtextviewstyle" />
	          	 <EditText android:id="@+id/Post" android:numeric="integer" style="@style/zreditfillstyle" />
	        </LinearLayout>
	        <LinearLayout android:id="@+id/LinearLayout07" style="@style/zrtexteditcenterstyle">
	            <TextView android:text="@string/mci_email" android:textColor="@color/zr_orange" style="@style/zrtextviewstyle" />
	          	 <EditText android:id="@+id/Email" style="@style/zreditfillstyle" />
	        </LinearLayout>
	        <LinearLayout android:id="@+id/LinearLayout08" style="@style/zrfundtexteditfooterstyle">
	            <TextView android:text="@string/mci_address" android:textColor="@color/zr_orange" style="@style/zrtextviewstyle" />
	          	 <EditText android:id="@+id/Address" android:layout_width="fill_parent" android:layout_height="wrap_content"
  						android:textSize="18.0dip" android:paddingLeft="5.0dip" android:background="@drawable/njzq_tyyh_lineinput"
  						android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:paddingBottom="1.0dip"
  						 android:inputType="textMultiLine" android:singleLine="false" android:lines="3" android:gravity="top"/>
	        </LinearLayout>
	       <LinearLayout android:layout_height="220.0dip" style="@style/zrtitlelinelaystyle" /> 
	    </LinearLayout>
	    
	</ScrollView>
	
	
	<LinearLayout android:id="@+id/linearyout2" android:layout_width="fill_parent"  android:layout_alignParentBottom="true"   	android:layout_height="wrap_content" >
  		<include android:id="@+id/zrtoolbar" layout="@layout/zr_toolbar2"    />
  	</LinearLayout>
	
	
		<com.cssweb.android.custom.TransPanel
		android:gravity="left" android:orientation="vertical" android:id="@+id/zr_popup_window"
		android:visibility="gone" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_below="@+id/zr_headerBar">
		<ListView android:id="@+id/zr_menulist" android:background="@drawable/zrlistback" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@drawable/zrlistselectbg" android:cacheColorHint="#ff1d1d1d" android:divider="@drawable/zrlistfgx" android:dividerHeight="2.0dip" android:keepScreenOn="true"
             xmlns:android="http://schemas.android.com/apk/res/android" />
	</com.cssweb.android.custom.TransPanel>
	
	<!--  
	<include android:id="@+id/zrtoolbar"
            android:layout_marginBottom="0dip"
            android:layout_weight="2"
			 layout="@layout/zr_toolbar2" />
			 
	-->
</RelativeLayout>