<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<include android:id="@+id/zr_headerBar" android:layout_width="fill_parent"
		android:layout_height="@dimen/title_height" layout="@layout/zr_topbar" />
	<LinearLayout android:id="@+id/relativeLayout2" android:layout_width="fill_parent"
		android:orientation = "vertical" android:layout_height="fill_parent" android:layout_below="@+id/zr_headerBar">
		<LinearLayout android:background="@drawable/zrlistback"
			android:gravity="center_vertical" android:orientation="horizontal"
			android:id="@+id/zr_rt_layout_title" android:layout_width="fill_parent"
			android:layout_height="@dimen/zhpm_title_height">
			<TextView android:text="@string/paiming_title1"
				android:textSize="18sp" android:textStyle="bold" android:textColor="@color/zr_newlightgray"
				android:gravity="center" android:id="@+id/zr_rt_title1"
				android:layout_width="80.0dip" android:layout_height="34.0dip"
				android:keepScreenOn="true" />
			<TextView android:text="@string/paiming_title2"
				android:textSize="18sp" android:textStyle="bold" android:textColor="@color/zr_newlightgray"
				android:gravity="center" android:id="@+id/zr_rt_title2"
				android:layout_width="80.0dip" android:layout_height="34.0dip"
				android:keepScreenOn="true" />
			<TextView android:text="@string/paiming_title3"
				android:textSize="18sp" android:textStyle="bold" android:textColor="@color/zr_newlightgray"
				android:gravity="center" android:id="@+id/zr_rt_title3"
				android:layout_width="80.0dip" android:layout_height="34.0dip"
				android:keepScreenOn="true" />
			<TextView android:text="@string/paiming_title4"
				android:textSize="18sp" android:textStyle="bold" android:textColor="@color/zr_newlightgray"
				android:gravity="center" android:id="@+id/zr_rt_title4"
				android:layout_width="80.0dip" android:layout_height="34.0dip"
				android:keepScreenOn="true" />
		</LinearLayout>
		
		<ListView android:id="@+id/zr_rt_listview" android:background="@drawable/zrlistback"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:cacheColorHint="#ff1d1d1d" android:dividerHeight="0.0dip"
			 xmlns:android="http://schemas.android.com/apk/res/android" />
		<include android:id="@+id/zrtoolbar" android:layout_alignParentBottom="true" layout="@layout/zr_toolbar2" />
	</LinearLayout>
	<com.cssweb.android.custom.TransPanel
			android:gravity="left" android:orientation="vertical" android:id="@+id/zr_popup_window"
			android:visibility="gone" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_below="@+id/zr_headerBar">
			<ListView android:id="@+id/zr_menulist" android:background="@drawable/zrlistback" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@drawable/zrlistselectbg" android:cacheColorHint="#ff1d1d1d" android:divider="@drawable/zrlistfgx" android:dividerHeight="2.0dip" android:keepScreenOn="true"
	             xmlns:android="http://schemas.android.com/apk/res/android" />
		</com.cssweb.android.custom.TransPanel>
</RelativeLayout>